tests/js/invalid/record/mismatched-type-0.buri
Person = {
    name: Str,
    age: Int,
}

jane: Person = {
    name: "Jane",
    age: "23",
}